--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -32,7 +32,7 @@
 				</div>
 			  <div class="container-fluid">
 				<div class="navbar-header" >
-					<a class="anc" href="#">Banaras Hindu University Varanasi</a>
+					<a class="anc" href="/">Banaras Hindu University Varanasi</a>
 				</div>
 				<ul class="nav navbar-nav navbar-right" id="ele2">
 				  <li ><a id="modalshow" href="#"style="color:black"><span class="glyphicon glyphicon-log-in" ></span> Login</a></li>
@@ -68,23 +68,23 @@
 					<div class="row">
 						<div class="col-md-3"  >				
 							<div class="panel panel-default eff" onclick="location.href = 'letters/'">
-								<div class="panel-body">Letters</div>
+								<div class="panel-body" style="cursor:pointer;">Letters</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 								<div class="panel panel-default eff" onclick="location.href = 'student/'">
-									<div class="panel-body">Student Records</div>
+									<div class="panel-body" style="cursor:pointer;">Student Records</div>
 								</div>						
 							
 						</div>
 						<div class="col-md-3" >
 							<div class="panel panel-default eff" onclick="location.href = 'timetable/';">
-								<div class="panel-body">Time Table</div>
+								<div class="panel-body" style="cursor:pointer;">Time Table</div>
 							</div>
 						</div>
 						<div class="col-md-3" >
 							<div class="panel panel-default eff"onclick="location.href = 'library/';" >
-								<div class="panel-body">Library</div>
+								<div class="panel-body" style="cursor:pointer;">Library</div>
 							</div>
 						</div>
 					</div>
