--- a/templates/home/loggedIN.html
+++ b/templates/home/loggedIN.html
@@ -32,7 +32,7 @@
 				</div>
 			  <div class="container-fluid">
 				<div class="navbar-header" >
-					<a class="anc" href="#">Banaras Hindu University Varanasi</a>
+					<a class="anc" href="/">Banaras Hindu University Varanasi</a>
 				</div>
 				<ul class="nav navbar-nav navbar-right" id="ele2">
 				  <li>
@@ -47,9 +47,9 @@
 			</nav>
 			<div id="personal">
 				<ul class="list-group">
-					<li class="list-group-item">Settings</li>
-					<li class="list-group-item">Profile</li>
-					<li onclick="location.href = '/logout/';" style="cursor:pointer" class="list-group-item">Logout</li>
+					<li onclick="location.href = '/settings/';" style="cursor:pointer" class="list-group-item">Settings</li>
+                    <li onclick="location.href = '/profile/';" style="cursor:pointer" class="list-group-item">Profile</li>
+                    <li onclick="location.href = '/logout/';" style="cursor:pointer" class="list-group-item">Logout</li>
 				</ul>
 			</div>
 		<div  id="body_item">
@@ -58,22 +58,22 @@
 					<div class="row">
 						<div class="col-md-3"  >				
 							<div class="panel panel-default eff" onclick="location.href = '/letters/'">
-								<div class="panel-body">Letters</div>
+								<div class="panel-body" style="cursor:pointer;">Letters</div>
 							</div>
 						</div>
 						<div class="col-md-3">
 							<div class="panel panel-default eff" onclick="location.href = '/student/';">
-								<div class="panel-body">Student Records</div>
+								<div class="panel-body" style="cursor:pointer;">Student Records</div>
 							</div>						
 						</div>
 						<div class="col-md-3" >
 							<div class="panel panel-default eff" onclick="location.href = '/timetable/';">
-								<div class="panel-body">Time Table</div>
+								<div class="panel-body" style="cursor:pointer;">Time Table</div>
 							</div>
 						</div>
 						<div class="col-md-3" >
 							<div class="panel panel-default eff"onclick="location.href = '/library/';" >
-								<div class="panel-body">Library</div>
+								<div class="panel-body" style="cursor:pointer;">Library</div>
 							</div>
 						</div>
 					</div>
