--- a/templates/timetable/index.html
+++ b/templates/timetable/index.html
@@ -1,201 +1,134 @@
 <!DOCTYPE HTML>
 <html>
-	<head>
-	
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="/static/timetable/script/bootstrap.min.css">
+<head>
 
-		<!-- jQuery library -->
-		<script src="/static/timetable/script/jquery.min.js"></script>
-		<!-- js-->
-		<script src="/static/timetable/script/letters.js"></script>
-		<!-- Latest compiled JavaScript -->
-		<script src="/static/timetable/script/bootstrap.min.js"></script>
-		<!-- My css-->
-		<link rel="stylesheet" type="text/css" href="/static/timetable/css/home.css">
-		<title>
-			Time table
-		</title>
-	</head>
-	<body onload="set_pos()" >
-			
-			<nav class="navbar navbar-inverse navbar-fixed-top" id="ele1">
-				<div class="row" id="myid" style="border:1px solid black;">
-					<div class="col-md-4" >				
-						<img src="/static/timetable/bhulogo.JPG" width="100%">
-						</img>
-					</div>
-					<div class="col-md-2"></div>
-					<div class="col-md-6" id="id1"> Faculty of Arts
-					</div>
-				</div>
-			  <div class="container-fluid" id="cont-flu">
-				<div class="navbar-header" >
-					<a class="anc" href="#">Banaras Hindu University Varanasi</a>
-				</div>
-				<ul class="nav navbar-nav navbar-right" id="ele2">
-				  <li>
-					<a href="#"style="color:black">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="/static/timetable/script/bootstrap.min.css">
+
+	<!-- jQuery library -->
+	<script src="/static/timetable/script/jquery.min.js"></script>
+	<!-- js-->
+	<script src="/static/timetable/script/letters.js"></script>
+	<!-- Latest compiled JavaScript -->
+	<script src="/static/timetable/script/bootstrap.min.js"></script>
+	<!-- My css-->
+	<link rel="stylesheet" type="text/css" href="/static/timetable/css/home.css">
+	<title>
+		Time table
+	</title>
+</head>
+<body onload="set_pos()">
+
+	<nav class="navbar navbar-inverse navbar-fixed-top" id="ele1">
+		<div class="row" id="myid" style="border:1px solid black;">
+			<div class="col-md-4">
+				<img src="/static/timetable/bhulogo.JPG" width="100%">
+
+			</div>
+			<div class="col-md-2"></div>
+			<div class="col-md-6" id="id1">
+				Faculty of Arts
+			</div>
+		</div>
+		<div class="container-fluid" id="cont-flu">
+			<div class="navbar-header">
+				<a class="anc" href="/">Banaras Hindu University Varanasi</a>
+			</div>
+			<ul class="nav navbar-nav navbar-right" id="ele2">
+				<li>
+					<a href="#" style="color:black">
 						<span class="glyphicon glyphicon-log-in" id="User_name" onclick="menu1()">
-						dhiraj&nbsp
+							{{name}}&nbsp
 						</span>
 					</a>
-				  </li>
-				</ul>
-			  </div>
-			</nav>
-			<div id="personal" class="menu">
-				<ul class="list-group">
-					<li class="list-group-item">Settings</li>
-					<li class="list-group-item">Profile</li>
-					<li class="list-group-item">Logout</li>
-				</ul>
-			</div>
-			<div id="body_item" class="text_modify">
-				<div class="well">
-					<h4 style="display:inline;margin-right:3%">
-						<div class="form-group" style="display:inline">
-							<label for="fliter">Search time table by </label>
-							<select class="form-control" style="width:30% !important;display:inline;margin-left:2%" id="filter">
-							<option>Roll number</option>
-							<option>Section</option>
-							<option>Instructor</option>
-							<option>Course</option>
-							</select>
-						</div> 
-					<input type="text" id="inp1" class="form-control" style="width:30% !important;display:inline;margin-left:2%" value="15075014" ></input>
-					</h4>
-					<button type="button" style="display:inline" onclick="query()" id="b1"class="btn btn-info">Search</button>
-				</div>
-				<div class="well">Search by Roll number : 15075014</div>
-				<div id="search_results" class="well">
-					<table class="table">
-						<tr>
-							<th>Time slot</th>
-							<th>25-08-2017</th>
-							<th>26-08-2017</th>
-							<th>27-08-2017</th>
-							<th>28-08-2017</th>
-							<th>29-08-2017</th>
-							<th>30-08-2017</th>
-							<th>31-08-2017</th>
-						</tr>
-						<tbody>
-							<tr  class="trb well">
-								<td>9:00AM to 10:00 AM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr   class="trb well">
-								<td>10:00AM to 11:00 AM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr   class="trb well">
-								<td>11:00AM to 12:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr  class="trb well">
-								<td>12:00PM to 1:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr  class="trb well">
-								<td>1:00PM to 2:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr  class="trb well">
-								<td>2:00PM to 3:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr  class="trb well">
-								<td>3:00PM to 4:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-							<tr  class="trb well">
-								<td>4:00PM to 5:00 PM</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-								<td>-</td>
-								<td>-</td>
-								<td>HS-101 History<br>Venue: B21</td>
-							</tr>
-						</tbody>
-					</table>
-					<div class="text-center">
-					<ul class="pagination well">
-					<li class="active"><a href="#" >1</a></li>
-					<li><a href="">2</a></li>
-					<li><a href="">3</a></li>
-					<li><a href="">4</a></li>
-					<li><a href="">5</a></li>
-					</ul>
-					</div>
-				</div>
-			</div>
-			<div id="modal_test" class="modal fade" role="dialog">
-			  <div class="modal-dialog">
+				</li>
+			</ul>
+		</div>
+	</nav>
+	<div id="personal" class="menu">
+		<ul class="list-group">
+			<li onclick="location.href = '/settings/';" style="cursor:pointer" class="list-group-item">Settings</li>
+			<li onclick="location.href = '/profile/';" style="cursor:pointer" class="list-group-item">Profile</li>
+			<li onclick="location.href = '/logout/';" style="cursor:pointer" class="list-group-item">Logout</li>
 
-				<!-- Modal content-->
-				<div class="modal-content">
-					<div class="panel panel-default">
-						<div class="panel-body text-center">
-							<h4>You sure you want to edit time table ?<strong id="roll" style="color:red"></strong></h4>
-						</div>
-					</div>
-					<div class="well text-center">
-						<button type="button" id="YES" style="margin-right:2%;padding-left:20px;padding-right:20px" class="btn btn-info"><h4>Yes</h4></button>
-						<button type="button" id="NO" style="margin-right:2%;padding-left:20px;padding-right:20px" class="btn btn-danger"><h4>No</h4></button>
-					</div>
-			  </div>
-			</div>
-			<!--<div>
-				<input id="sample" type="text" style="margin-top:500px" value="def"></input>
-			</div>
-			
-				Number| View |details ->date, source,subject, status, history| take action -> Forward, Completed,reject + descp|
-			-->
-	</body>
+		</ul>
+	</div>
+	<div id="body_item" class="text_modify">
+		<div class="well">
+			<form action="/timetable/search/" method="post">
+				<table class="table">
+					<tbody>
+						<tr class="trb well">
+							<th class="form-group">
+								Time table search
+							</th>
+						</tr>
+						<tr class="trb well ">
+							<td class="form-group">
+								<select class="form-control" name="filterby" id="filter" required>
+									<option value="stu">Student </option>
+									<option value="cls">Class</option>
+									<option value="fac">Faculty</option>
+								</select>
+							</td>
+							<td class="form-group">
+								<input type="date" name="filtervalue1" class="form-control" required />
+							</td>
+							<td class="form-group">
+								<input type="text" id="inp1" name="filtervalue2" class="form-control" required />
+							</td>
+						</tr>
+					</tbody>
+				</table>
+				<button type="submit" style="display:inline" id="b1" class="btn btn-info">Search</button>
+			</form>
+		</div>
+		{%if search=="1"%}
+		<div class="well">Search by {{typo}} </div>
+		{% endif %}
+		<div class="well">
+			<table class="table">
+
+				<tr>
+					{% for i in buttons %}
+					<th class="trb well">
+						<button type="button" onclick="location.href = '/{{ i[1] }}/';" class="btn btn-info">{{i[0]}}</button>
+					</th>
+					{% endfor %}
+				</tr>
+
+			</table>
+		</div>
+		{% if res|count > 0 %}
+		<div id="search_results" class="well">
+
+			<table class="table">
+				<tr>
+					{% for i in range(res[0]|count) %}
+					<th>{{res[0][i]}}</th>
+					{% endfor %}
+				</tr>
+				<tbody>
+					{% for i in range(1,res|count) %}
+					{% set k = res[i] %}
+					<tr class="trb well">
+
+						{% for  j in k %}
+						<td>{{j}}</td>
+						{% endfor %}
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+		{% endif %}
+	</div>
+	<!--<div>
+		<input id="sample" type="text" style="margin-top:500px" value="def"></input>
+	</div>
+
+		Number| View |details ->date, source,subject, status, history| take action -> Forward, Completed,reject + descp|
+	-->
+</body>
 </html>
